# solar-tracker

./: .gitignore  CLAUDE.md  README.md
clojure/: deps.edn
clojure/examples/com/kardashevtypev/solar/examples/: calculation.clj
clojure/src/com/kardashevtypev/solar/: angles.clj  lookup_table.clj
clojure/src/com/kardashevtypev/solar/angles/: spec.clj
clojure/src/com/kardashevtypev/solar/lookup_table/: spec.clj
clojure/test/com/kardashevtypev/solar/: angles_test.clj  lookup_table_test.clj  test_util.clj
dev/archnotes/: solar-angle-lookup-tables.md  solar-panel-angle-calculations.md
doc/: api-reference.md  dual-axis-latitude-independence.md  internal-helpers.md  lookup-table-implementation-notes.md
python/: pyproject.toml
python/examples/: calculation.py
python/solar_tracker/: __init__.py  _types.py  angles.py  lookup_table.py
python/tests/: test_angles.py  test_lookup_table.py
rust/: Cargo.toml
rust/examples/: calculation.rs
rust/src/: angles.rs  lib.rs  lookup_table.rs  types.rs
rust/tests/: test_angles.rs  test_lookup_table.rs
src/com/kardashevtypev/solar/: angles.clj
src/solar/: angles.clj  lookup_table.clj
src/solar/angles/: spec.clj
src/solar/lookup_table/: spec.clj
test/solar/: angles_test.clj  lookup_table_test.clj
