[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-tracker"
version = "0.1.0"
description = "Solar angle calculation library for solar panel tracking systems"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
